Fix the hero section alignments in mobile view (#15)
Fix the hero section alignments in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ span {
 }
 
 #hero .hero-container {
-  position: absolute;
+  position: relative;
   bottom: 0;
   top: 0;
   left: 0;
